# rust-web-todo

./: README.md  docker-compose.yml
backend/: Cargo.toml
backend/sql/: 00-recreate-db.sql
backend/src/: main.rs
backend/src/_tests/: model_db.rs  model_todo.rs
backend/src/model/: db.rs  mod.rs  todo.rs
backend/src/security/: mod.rs
backend/src/web/: mod.rs  todo.rs
frontend/: package.json
frontend/web-folder/: index.html
